<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/LinerLayout1"
    android:gravity="bottom">

    <!--表格一-->
    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv1"
            android:layout_margin="4dp"/>
    </TableLayout>

    <!--表格二-->
    <TableLayout
        android:id="@+id/TableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0">

        <TableRow
            android:id="@+id/TableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvStrech"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:layout_margin="4dp"/>

            <TextView
                android:id="@+id/TextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvShort"
                android:background="@color/colorAccent"
                android:textColor="@color/colorPrimary"
                android:layout_margin="4dp"/>
        </TableRow>
    </TableLayout>

    <!--表格三-->
    <TableLayout
        android:id="@+id/TableLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="0">
        <TableRow
            android:id="@+id/TableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvShrink"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:layout_margin="4dp"/>

            <TextView
                android:id="@+id/TextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvShort"
                android:layout_centerInParent="true"
                android:background="@color/colorAccent"
                android:textColor="@color/colorPrimary"
                android:layout_margin="4dp"/>
            <TextView
                android:id="@+id/TextView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvLong"
                android:background="@color/colorAccent"
                android:textColor="@color/colorPrimary"
                android:layout_margin="4dp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
